[gd_scene load_steps=6 format=3 uid="uid://d6jmaok0ivmi"]

[ext_resource type="Script" uid="uid://bxtfhtcgwp1i7" path="res://ui/screen_ui/pause_menu/settings_menu/keybinds_menu/keybinds_menu.gd" id="1_3tnxu"]
[ext_resource type="Theme" uid="uid://b6tppincjordy" path="res://ui/main_ui_theme.tres" id="2_qjqc3"]
[ext_resource type="PackedScene" uid="uid://bro7uo2viqqx3" path="res://ui/screen_ui/elements/panel_container_wrapper.tscn" id="3_i5wpe"]
[ext_resource type="PackedScene" uid="uid://bexngvubt04b" path="res://ui/screen_ui/pause_menu/settings_menu/keybinds_menu/keybind_line.tscn" id="4_1xqge"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ih0hb"]

[node name="KeybindsMenu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3tnxu")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -104.5
offset_top = -138.0
offset_right = 104.5
offset_bottom = 138.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="BackButton" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_default_cursor_shape = 2
theme = ExtResource("2_qjqc3")
text = "Back"

[node name="PanelContainerWrapper" parent="VBoxContainer" instance=ExtResource("3_i5wpe")]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/PanelContainerWrapper"]
layout_mode = 2
theme_override_constants/margin_left = 14
theme_override_constants/margin_top = 14
theme_override_constants/margin_right = 14
theme_override_constants/margin_bottom = 24

[node name="MainKeybinds" type="PanelContainer" parent="VBoxContainer/PanelContainerWrapper/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_ih0hb")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainerWrapper/MarginContainer/MainKeybinds"]
layout_mode = 2

[node name="GraphicsLabel" type="RichTextLabel" parent="VBoxContainer/PanelContainerWrapper/MarginContainer/MainKeybinds/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_qjqc3")
text = "KEYBINDS"
fit_content = true

[node name="Gap" type="Control" parent="VBoxContainer/PanelContainerWrapper/MarginContainer/MainKeybinds/VBoxContainer"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2

[node name="KeybindLine" parent="VBoxContainer/PanelContainerWrapper/MarginContainer/MainKeybinds/VBoxContainer" instance=ExtResource("4_1xqge")]
layout_mode = 2

[node name="KeybindLine2" parent="VBoxContainer/PanelContainerWrapper/MarginContainer/MainKeybinds/VBoxContainer" instance=ExtResource("4_1xqge")]
layout_mode = 2
input_binding_id = "rmb"
display_name = "Dig/Remove"

[node name="KeybindLine3" parent="VBoxContainer/PanelContainerWrapper/MarginContainer/MainKeybinds/VBoxContainer" instance=ExtResource("4_1xqge")]
layout_mode = 2
input_binding_id = "up"
display_name = "Camera Up"

[node name="KeybindLine4" parent="VBoxContainer/PanelContainerWrapper/MarginContainer/MainKeybinds/VBoxContainer" instance=ExtResource("4_1xqge")]
layout_mode = 2
input_binding_id = "down"
display_name = "Camera Down"

[node name="KeybindLine5" parent="VBoxContainer/PanelContainerWrapper/MarginContainer/MainKeybinds/VBoxContainer" instance=ExtResource("4_1xqge")]
layout_mode = 2
input_binding_id = "left"
display_name = "Camera Left"

[node name="KeybindLine6" parent="VBoxContainer/PanelContainerWrapper/MarginContainer/MainKeybinds/VBoxContainer" instance=ExtResource("4_1xqge")]
layout_mode = 2
input_binding_id = "right"
display_name = "Camera Right"

[node name="KeybindLine7" parent="VBoxContainer/PanelContainerWrapper/MarginContainer/MainKeybinds/VBoxContainer" instance=ExtResource("4_1xqge")]
layout_mode = 2
input_binding_id = "zoom_cam_in"
display_name = "Zoom In"

[node name="KeybindLine8" parent="VBoxContainer/PanelContainerWrapper/MarginContainer/MainKeybinds/VBoxContainer" instance=ExtResource("4_1xqge")]
layout_mode = 2
input_binding_id = "zoom_cam_out"
display_name = "Zoom Out"

[node name="KeybindLine9" parent="VBoxContainer/PanelContainerWrapper/MarginContainer/MainKeybinds/VBoxContainer" instance=ExtResource("4_1xqge")]
layout_mode = 2
input_binding_id = "pause"
display_name = "Pause/Back"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
